--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,19 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags ""
+                cppFlags "-std=c++11"
+            }
+            ndk {
+                abiFilters "armeabi-v7a"
             }
         }
+
+        sourceSets {
+            main {
+                jniLibs.srcDirs=['libs']
+            }
+        }
+
     }
     buildTypes {
         release {
